--- a/toc.yaml
+++ b/toc.yaml
@@ -9,7 +9,7 @@ toc:
     href: /docs/DataTransferService?topic=DataTransferService-gettingstarted
     release-level: deprecated
     console-page: /classic-gen1
-    product-page: https://cloud.ibm.com/docs/DataTransferService?topic=DataTransferService-about
+    product-page: https://cloud.ibm.com/docs/DataTransferService
     path: DataTransferService
     label: IBM Cloud Data Transfer Service
 #  List your getting started tutorial (getting-started.md) as the first item in the Get started nav group.
